FIX: too high height remaining for reading actions

--- a/app/assets/stylesheets/app.responsive.scss
+++ b/app/assets/stylesheets/app.responsive.scss
@@ -55,8 +55,12 @@
 
       height: 50px;
     }
+
+    .heading-actions {
+        height: initial;
+    }
   }
-  
+
   .calendar-container {
     position: absolute; 
     top: 100px; 
